ajout des pages

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 
 <h2>Sommaire</h2>
 <ul>
-  <li>Introduction</li>
-  <li>Présentation de l'entreprise</li>
-  <li>Découverte du métier</li>
-  <li>Description d'une journée</li>
-  <li>Ce que j'ai appris</li>
-  <li>Conclusion</li>
+  <li><a href="introduction.html">Introduction</a></li>
+  <li><a href="presentation.html">Présentation de l'entreprise</a></li>
+  <li><a href="decouverte.html">Découverte du métier</a></li>
+  <li><a href="description.html">Description d'une journée</a></li>
+  <li><a href="apprentissage.html">Ce que j'ai appris</a></li>
+  <li><a href="conclusion.html">Conclusion</a></li>
 </ul>
 
 <div class="styled-button">
