stylisation du sommaire

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -10,7 +11,7 @@
 
 
 <div class="card">
-  <img src="https://cdn.pixabay.com/photo/2016/08/08/09/17/avatar-1577909_1280.png" alt="avatar" width="70">
+  <img src="https://us.123rf.com/450wm/belopoppa/belopoppa2003/belopoppa200300033/142826885-image-d-espace-r%C3%A9serv%C3%A9-de-profil-silhouette-grise-pas-de-photo.jpg?ver=6" alt="avatar" width="70">
   <div class="card-info">
     <p class="bolder">Paul Groby</p>
     <p>Classe 3°1</p>
@@ -19,17 +20,19 @@
 
 
 <h2>Sommaire</h2>
-<ul>
-  <li><a href="introduction.html">Introduction</a></li>
-  <li><a href="presentation.html">Présentation de l'entreprise</a></li>
-  <li><a href="decouverte.html">Découverte du métier</a></li>
-  <li><a href="description.html">Description d'une journée</a></li>
-  <li><a href="apprentissage.html">Ce que j'ai appris</a></li>
-  <li><a href="conclusion.html">Conclusion</a></li>
-</ul>
+<nav>
+  <ul>
+    <li><a href="introduction.html">Introduction</a></li>
+    <li><a href="presentation.html">Présentation de l'entreprise</a></li>
+    <li><a href="decouverte.html">Découverte du métier</a></li>
+    <li><a href="description.html">Description d'une journée</a></li>
+    <li><a href="apprentissage.html">Ce que j'ai appris</a></li>
+    <li><a href="conclusion.html">Conclusion</a></li>
+  </ul>
+</nav>
 
 <div class="styled-button">
-  <a class="cta" href="#">
+  <a class="cta" href="testboutton.html">
     <span>NEXT</span>
     <span>
       <svg width="66px" height="43px" viewBox="0 0 66 43" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
