ajout contenu de la page presentation

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 </nav>
 
 <div class="styled-button">
-  <a class="cta" href="testboutton.html">
-    <span>NEXT</span>
+  <a class="cta" href="cube.html">
+    <span>CUBE</span>
     <span>
       <svg width="66px" height="43px" viewBox="0 0 66 43" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
         <g id="arrow" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
