--- a/presentation.html
+++ b/presentation.html
@@ -3,8 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Présentation de l'entreprise</h1>
+<div class="container">
+  <h1>Présentation de l'entreprise</h1>
+  <p>Zenika est une entreprise crée en 2006 par des passionnés de technologies qui souhaitaient fonder l’entreprise
+    idéale, dans laquelle ils auraient rêvé de travailler quand ils étaient consultants.
+    Avec un effectif d’environ 500 collaborateurs à travers le monde, Zenika est une entreprise au modèle unique, qui
+    concentre au sein de la même entité les métiers du Conseil, de la Formation et de la Réalisation appliqués aux
+    technologies Open Source et à l’Agilité.
+
+    Cette triple compétence permet aux Consultants d’aborder véritablement les multiples facettes du métier d’Ingénieur
+    tout en proposant la meilleure expertise technologique aux clients.
+
+  </p>
+  <img src="images/zenika-timeline.png" alt="zenika-timeline" />
+</div>
 </body>
 </html>
