nouvelle page d'accueil

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>Rapport de stage</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -21,15 +21,46 @@
 
 <h2>Sommaire</h2>
 <nav>
-  <ul>
-    <li><a href="introduction.html">Introduction</a></li>
-    <li><a href="presentation.html">Présentation de l'entreprise</a></li>
-    <li><a href="decouverte.html">Découverte du métier</a></li>
-    <li><a href="description.html">Description d'une journée</a></li>
-    <li><a href="apprentissage.html">Ce que j'ai appris</a></li>
-    <li><a href="conclusion.html">Conclusion</a></li>
+  <ul class="bolder">
+    <li><a href="#introduction">Introduction</a></li>
+    <li><a href="#presentation">Présentation de l'entreprise</a></li>
+    <li><a href="#decouverte">Découverte du métier</a></li>
+    <li><a href="#description">Description d'une journée</a></li>
+    <li><a href="#apprentissage">Ce que j'ai appris</a></li>
+    <li><a href="#conclusion">Conclusion</a></li>
   </ul>
 </nav>
+
+<article id="introduction">
+  <h3>Introduction</h3>
+  <p>Bonjour aujourd-hui je vais vous présenter comment s'est dérouler mon stage chez l'entreprise Zenika</p>
+</article>
+<article id="presentation">
+  <h3>Présentation de l'entreprise</h3>
+  <p>Zenika est une entreprise crée en 2006 par des passionnés de technologies qui souhaitaient fonder l’entreprise
+    idéale, dans laquelle ils auraient rêvé de travailler quand ils étaient consultants.
+    Avec un effectif d’environ 500 collaborateurs à travers le monde, Zenika est une entreprise au modèle unique, qui
+    concentre au sein de la même entité les métiers du Conseil, de la Formation et de la Réalisation appliqués aux
+    technologies Open Source et à l’Agilité.
+
+    Cette triple compétence permet aux Consultants d’aborder véritablement les multiples facettes du métier d’Ingénieur
+    tout en proposant la meilleure expertise technologique aux cl</p>
+    <img src="images/zenika-timeline.png" alt="zenika-timeline" />
+
+</article>
+<article id="decouverte">
+  <h3>Découverte du métier</h3>
+  <p>Le métier de dévoloppeur est très vaste.
+  il y a des developpeur web, consultant en informatique, ingenieur informatique et des consultant fullstack </p>
+</article>
+<article id="description">
+  <h3>Déscription d'une journée</h3>
+  <p>une journée commence le matin avec du code (développement) et quelque reunions, après il y a la pause midi, et l'après-midi il y a du code et des reunions le soir</p>
+</article>
+<article id="apprentissage">
+  <h3>Ce que j'ai appris</h3>
+  <p>j'ai appris que dans le dévelopement web il faut étre perséverant, curieux, créatif, logique, avoir l'envie d'apprendre et savoir bien raisoner </p>
+</article>
 
 <div class="styled-button">
   <a class="cta" href="cube.html">
