--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
 
 
 <div class="card">
-  <img src="https://us.123rf.com/450wm/belopoppa/belopoppa2003/belopoppa200300033/142826885-image-d-espace-r%C3%A9serv%C3%A9-de-profil-silhouette-grise-pas-de-photo.jpg?ver=6" alt="avatar" width="70">
+  <img src="images/avatar-placeholder.svg" alt="avatar" width="70">
   <div class="card-info">
     <p class="bolder">Paul Groby</p>
     <p>Classe 3°1</p>
   </div>
 </div>
-
 
 <h2>Sommaire</h2>
 <nav>
@@ -31,46 +30,113 @@
   </ul>
 </nav>
 
+<hr class="separator">
+
 <article id="introduction">
-  <h3>Introduction</h3>
-  <p>Bonjour aujourd-hui je vais vous présenter comment s'est dérouler mon stage chez l'entreprise Zenika</p>
+  <h2>Introduction</h2>
+  <p>Bonjour, aujourd'hui je vais vous présenter comment s'est déroulé mon stage au sein de l'entreprise Zenika.</p>
+  <img src="images/logo-zenika.png" alt="logo Zenika" id="logo-zenika">
 </article>
+
+<hr class="separator">
+
 <article id="presentation">
-  <h3>Présentation de l'entreprise</h3>
-  <p>Zenika est une entreprise crée en 2006 par des passionnés de technologies qui souhaitaient fonder l’entreprise
+  <h2>Présentation de l'entreprise</h2>
+  <p>
+    Zenika est une entreprise crée en 2006 par des passionnés de technologies qui souhaitaient fonder l’entreprise
     idéale, dans laquelle ils auraient rêvé de travailler quand ils étaient consultants.
+  </p>
+
+  <p>
     Avec un effectif d’environ 500 collaborateurs à travers le monde, Zenika est une entreprise au modèle unique, qui
     concentre au sein de la même entité les métiers du Conseil, de la Formation et de la Réalisation appliqués aux
     technologies Open Source et à l’Agilité.
+  </p>
 
+  <p>
     Cette triple compétence permet aux Consultants d’aborder véritablement les multiples facettes du métier d’Ingénieur
-    tout en proposant la meilleure expertise technologique aux cl</p>
-    <img src="images/zenika-timeline.png" alt="zenika-timeline" />
-
+    tout en proposant la meilleure expertise technologique aux clients.
+  </p>
+  <img class="mt-3" src="images/zenika-timeline.png" alt="zenika-timeline" />
 </article>
+
+<hr class="separator">
+
 <article id="decouverte">
-  <h3>Découverte du métier</h3>
-  <p>Le métier de dévoloppeur est très vaste.
-  il y a des developpeur web, consultant en informatique, ingenieur informatique et des consultant fullstack </p>
-</article>
-<article id="description">
-  <h3>Déscription d'une journée</h3>
-  <p>une journée commence le matin avec du code (développement) et quelque reunions, après il y a la pause midi, et l'après-midi il y a du code et des reunions le soir</p>
-</article>
-<article id="apprentissage">
-  <h3>Ce que j'ai appris</h3>
-  <p>j'ai appris que dans le dévelopement web il faut étre perséverant, curieux, créatif, logique, avoir l'envie d'apprendre et savoir bien raisoner </p>
+  <h2>Découverte du métier</h2>
+  <p>Le métier de <span class="bolder">développeur web</span> est très vaste.<br>
+    Il existe de nombreuses spécialisations, notamment :
+  </p>
+  <ul>
+    <li>Ingénieur <span class="bolder">Front-End</span></li>
+    <li>Ingénieur <span class="bolder">Back-End</span></li>
+    <li>Ingénieur <span class="bolder">Fullstack</span></li>
+    <li>Ingénieur <span class="bolder">Devops</span></li>
+  </ul>
 </article>
 
-<div class="styled-button">
+<hr class="separator">
+
+<article id="description">
+  <h2>Description d'une journée</h2>
+  <p>
+    Les journées des développeurs sont variées. Ils codent la majorité du temps.
+  </p>
+  <p>
+    En général le matin il y a une réunion qui revient tous les jours que l'on appelle le <span
+    class="bolder">Daily</span>.
+  </p>
+  <p>
+    L'après-midi est plus souvent consacré au développement, à la réflexion et à la concentration. <br>
+    Il peut aussi y avoir des réunions en fin de journée.
+  </p>
+</article>
+
+<hr class="separator">
+
+<article id="apprentissage">
+  <h2>Ce que j'ai appris</h2>
+  <p>J'ai pu voir 3 langages différents qui sont nécessaires pour développer un site web :</p>
+  <img src="images/html-js-css.webp" alt="logo code">
+  <p>J'ai appris que dans le développement web, il faut être <span class="bolder">perséverant, curieux, créatif, logique, avoir l'envie
+    d'apprendre et savoir bien raisonner</span>.
+  </p>
+  <p>J'ai trouvé ce métier passionnant et il m'a donné envie de l'apprendre encore plus.</p>
+</article>
+
+<hr class="separator">
+
+<article id="conclusion">
+  <h2>Conclusion</h2>
+  <p>
+    Merci de m'avoir écouté. J'espère que ça vous a plu. <br>
+    Avez-vous des questions ?
+  </p>
+</article>
+
+<hr class="separator">
+
+<p>Site Web réalisé par <a class="primary-color bolder" href="https://github.com/fatb38/stage-polo" target="_blank">Paul Groby</a></p>
+
+<hr class="separator">
+
+<h2>Un exemple de CSS</h2>
+<div class="styled-button mt-3 mb-3">
   <a class="cta" href="cube.html">
-    <span>CUBE</span>
+    <span>Le Cube</span>
     <span>
-      <svg width="66px" height="43px" viewBox="0 0 66 43" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+      <svg width="66px" height="43px" viewBox="0 0 66 43" version="1.1" xmlns="http://www.w3.org/2000/svg"
+           xmlns:xlink="http://www.w3.org/1999/xlink">
         <g id="arrow" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-          <path class="one" d="M40.1543933,3.89485454 L43.9763149,0.139296592 C44.1708311,-0.0518420739 44.4826329,-0.0518571125 44.6771675,0.139262789 L65.6916134,20.7848311 C66.0855801,21.1718824 66.0911863,21.8050225 65.704135,22.1989893 C65.7000188,22.2031791 65.6958657,22.2073326 65.6916762,22.2114492 L44.677098,42.8607841 C44.4825957,43.0519059 44.1708242,43.0519358 43.9762853,42.8608513 L40.1545186,39.1069479 C39.9575152,38.9134427 39.9546793,38.5968729 40.1481845,38.3998695 C40.1502893,38.3977268 40.1524132,38.395603 40.1545562,38.3934985 L56.9937789,21.8567812 C57.1908028,21.6632968 57.193672,21.3467273 57.0001876,21.1497035 C56.9980647,21.1475418 56.9959223,21.1453995 56.9937605,21.1432767 L40.1545208,4.60825197 C39.9574869,4.41477773 39.9546013,4.09820839 40.1480756,3.90117456 C40.1501626,3.89904911 40.1522686,3.89694235 40.1543933,3.89485454 Z" fill="#FFFFFF"></path>
-          <path class="two" d="M20.1543933,3.89485454 L23.9763149,0.139296592 C24.1708311,-0.0518420739 24.4826329,-0.0518571125 24.6771675,0.139262789 L45.6916134,20.7848311 C46.0855801,21.1718824 46.0911863,21.8050225 45.704135,22.1989893 C45.7000188,22.2031791 45.6958657,22.2073326 45.6916762,22.2114492 L24.677098,42.8607841 C24.4825957,43.0519059 24.1708242,43.0519358 23.9762853,42.8608513 L20.1545186,39.1069479 C19.9575152,38.9134427 19.9546793,38.5968729 20.1481845,38.3998695 C20.1502893,38.3977268 20.1524132,38.395603 20.1545562,38.3934985 L36.9937789,21.8567812 C37.1908028,21.6632968 37.193672,21.3467273 37.0001876,21.1497035 C36.9980647,21.1475418 36.9959223,21.1453995 36.9937605,21.1432767 L20.1545208,4.60825197 C19.9574869,4.41477773 19.9546013,4.09820839 20.1480756,3.90117456 C20.1501626,3.89904911 20.1522686,3.89694235 20.1543933,3.89485454 Z" fill="#FFFFFF"></path>
-          <path class="three" d="M0.154393339,3.89485454 L3.97631488,0.139296592 C4.17083111,-0.0518420739 4.48263286,-0.0518571125 4.67716753,0.139262789 L25.6916134,20.7848311 C26.0855801,21.1718824 26.0911863,21.8050225 25.704135,22.1989893 C25.7000188,22.2031791 25.6958657,22.2073326 25.6916762,22.2114492 L4.67709797,42.8607841 C4.48259567,43.0519059 4.17082418,43.0519358 3.97628526,42.8608513 L0.154518591,39.1069479 C-0.0424848215,38.9134427 -0.0453206733,38.5968729 0.148184538,38.3998695 C0.150289256,38.3977268 0.152413239,38.395603 0.154556228,38.3934985 L16.9937789,21.8567812 C17.1908028,21.6632968 17.193672,21.3467273 17.0001876,21.1497035 C16.9980647,21.1475418 16.9959223,21.1453995 16.9937605,21.1432767 L0.15452076,4.60825197 C-0.0425130651,4.41477773 -0.0453986756,4.09820839 0.148075568,3.90117456 C0.150162624,3.89904911 0.152268631,3.89694235 0.154393339,3.89485454 Z" fill="#FFFFFF"></path>
+          <path class="one"
+                d="M40.1543933,3.89485454 L43.9763149,0.139296592 C44.1708311,-0.0518420739 44.4826329,-0.0518571125 44.6771675,0.139262789 L65.6916134,20.7848311 C66.0855801,21.1718824 66.0911863,21.8050225 65.704135,22.1989893 C65.7000188,22.2031791 65.6958657,22.2073326 65.6916762,22.2114492 L44.677098,42.8607841 C44.4825957,43.0519059 44.1708242,43.0519358 43.9762853,42.8608513 L40.1545186,39.1069479 C39.9575152,38.9134427 39.9546793,38.5968729 40.1481845,38.3998695 C40.1502893,38.3977268 40.1524132,38.395603 40.1545562,38.3934985 L56.9937789,21.8567812 C57.1908028,21.6632968 57.193672,21.3467273 57.0001876,21.1497035 C56.9980647,21.1475418 56.9959223,21.1453995 56.9937605,21.1432767 L40.1545208,4.60825197 C39.9574869,4.41477773 39.9546013,4.09820839 40.1480756,3.90117456 C40.1501626,3.89904911 40.1522686,3.89694235 40.1543933,3.89485454 Z"
+                fill="#FFFFFF"></path>
+          <path class="two"
+                d="M20.1543933,3.89485454 L23.9763149,0.139296592 C24.1708311,-0.0518420739 24.4826329,-0.0518571125 24.6771675,0.139262789 L45.6916134,20.7848311 C46.0855801,21.1718824 46.0911863,21.8050225 45.704135,22.1989893 C45.7000188,22.2031791 45.6958657,22.2073326 45.6916762,22.2114492 L24.677098,42.8607841 C24.4825957,43.0519059 24.1708242,43.0519358 23.9762853,42.8608513 L20.1545186,39.1069479 C19.9575152,38.9134427 19.9546793,38.5968729 20.1481845,38.3998695 C20.1502893,38.3977268 20.1524132,38.395603 20.1545562,38.3934985 L36.9937789,21.8567812 C37.1908028,21.6632968 37.193672,21.3467273 37.0001876,21.1497035 C36.9980647,21.1475418 36.9959223,21.1453995 36.9937605,21.1432767 L20.1545208,4.60825197 C19.9574869,4.41477773 19.9546013,4.09820839 20.1480756,3.90117456 C20.1501626,3.89904911 20.1522686,3.89694235 20.1543933,3.89485454 Z"
+                fill="#FFFFFF"></path>
+          <path class="three"
+                d="M0.154393339,3.89485454 L3.97631488,0.139296592 C4.17083111,-0.0518420739 4.48263286,-0.0518571125 4.67716753,0.139262789 L25.6916134,20.7848311 C26.0855801,21.1718824 26.0911863,21.8050225 25.704135,22.1989893 C25.7000188,22.2031791 25.6958657,22.2073326 25.6916762,22.2114492 L4.67709797,42.8607841 C4.48259567,43.0519059 4.17082418,43.0519358 3.97628526,42.8608513 L0.154518591,39.1069479 C-0.0424848215,38.9134427 -0.0453206733,38.5968729 0.148184538,38.3998695 C0.150289256,38.3977268 0.152413239,38.395603 0.154556228,38.3934985 L16.9937789,21.8567812 C17.1908028,21.6632968 17.193672,21.3467273 17.0001876,21.1497035 C16.9980647,21.1475418 16.9959223,21.1453995 16.9937605,21.1432767 L0.15452076,4.60825197 C-0.0425130651,4.41477773 -0.0453986756,4.09820839 0.148075568,3.90117456 C0.150162624,3.89904911 0.152268631,3.89694235 0.154393339,3.89485454 Z"
+                fill="#FFFFFF"></path>
         </g>
       </svg>
     </span>
